--- a/package.json
+++ b/package.json
@@ -6,33 +6,115 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:take-ownership": "ng build take-ownership && npx cpr projects/take-ownership/assets dist/take-ownership/assets --deleteFirst"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@alfresco/adf-content-services": "4.9.0-34192",
+    "@alfresco/adf-core": "4.9.0-34192",
+    "@alfresco/adf-extensions": "4.9.0-34192",
+    "@alfresco/js-api": "4.8.0",
+    "@angular/animations": "10.0.4",
+    "@angular/cdk": "^10.0.2",
+    "@angular/common": "10.0.4",
+    "@angular/compiler": "10.0.4",
+    "@angular/core": "10.0.4",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "10.0.4",
+    "@angular/material": "^10.0.2",
+    "@angular/material-moment-adapter": "^10.2.5",
+    "@angular/platform-browser": "10.0.4",
+    "@angular/platform-browser-dynamic": "10.0.4",
+    "@angular/router": "10.0.4",
+    "@mat-datetimepicker/core": "5.1.1",
+    "@mat-datetimepicker/moment": "5.1.1",
+    "@ngrx/effects": "^9.2.0",
+    "@ngrx/router-store": "^9.2.0",
+    "@ngrx/store": "^9.2.0",
+    "@ngrx/store-devtools": "^9.2.0",
+    "@ngx-translate/core": "^13.0.0",
+    "minimatch-browser": "^1.0.0",
+    "moment": "^2.27.0",
+    "moment-es6": "1.0.0",
+    "pdfjs-dist": "2.5.207",
+    "rxjs": "^6.6.3",
+    "take-ownership": "file:projects/take-ownership",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "~13.2.3",
-    "@angular/compiler-cli": "~13.2.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "@alfresco/adf-cli": "4.9.0-34192",
+    "@alfresco/adf-testing": "4.9.0-34192",
+    "@angular-custom-builders/lite-serve": "^0.2.3",
+    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular-devkit/build-ng-packagr": "^0.1002.0",
+    "@angular-eslint/builder": "1.2.0",
+    "@angular-eslint/eslint-plugin": "1.2.0",
+    "@angular-eslint/eslint-plugin-template": "1.2.0",
+    "@angular-eslint/schematics": "1.2.0",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "^10.1.4",
+    "@angular/compiler-cli": "10.0.4",
+    "@angular/language-service": "11.0.8",
+    "@types/event-emitter": "^0.3.3",
+    "@types/jasmine": "3.6.3",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.14.12",
+    "@types/selenium-webdriver": "^4.0.9",
+    "@types/superagent": "^4.1.10",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "adf-tslint-rules": "0.0.7",
+    "ajv-cli": "^4.2.0",
+    "browser-sync": "^2.27.7",
+    "chalk": "^5.0.0",
+    "codelyzer": "^6.0.1",
+    "commander": "^6.1.0",
+    "connect-history-api-fallback": "^1.6.0",
+    "cspell": "^5.16.0",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "envsub": "^4.0.7",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-rxjs": "^5.0.2",
+    "eslint-plugin-unicorn": "latest",
+    "http-server": "^14.1.0",
+    "husky": "^7.0.2",
+    "inquirer": "^8.1.5",
+    "jasmine-core": "^4.0.0",
+    "jasmine-marbles": "0.8.3",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.15",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "lint-staged": "^12.3.1",
+    "lite-server": "^2.4.0",
+    "ng-packagr": "^10.1.2",
+    "node-stream-zip": "^1.14.0",
+    "prettier": "2.5.1",
+    "protractor": "~7.0.0",
+    "protractor-retry-angular-cli": "^2.0.2",
+    "protractor-screenshoter-plugin": "0.10.3",
+    "protractor-smartrunner": "^2.0.0-beta6",
+    "rxjs-tslint": "^0.1.8",
+    "rxjs-tslint-rules": "^4.34.3",
+    "selenium-webdriver": "^4.1.1",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "3.12.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "3.9.8",
+    "webdriver-manager": "12.1.8",
+    "winston": "^3.4.0"
   }
 }
